--- a/src/lib/foo/pytest_runner/BUILD
+++ b/src/lib/foo/pytest_runner/BUILD
@@ -1,17 +1,13 @@
-load("@rules_python//python:defs.bzl", "py_test")
-load("@pip//:requirements.bzl", "requirement")
+load("//rules/pytest:rules.bzl", "py_test")
 
 py_test(
     name = "foo_test",
     srcs = [
-        "main_test.py",
         "foo_test.py",
         "bar_test.py",
     ],
     deps = [
         "//idl/foo:foo_py",
-        requirement("pytest"),
     ],
-    main = "main_test.py",
     visibility = ["//visibility:public"],
 )
